--- a/_sass/minimal/_page.scss
+++ b/_sass/minimal/_page.scss
@@ -36,3 +36,22 @@ section img {
   width: 100%;
   border-radius: .5em;
 }
+
+section pre {
+	width: auto;
+	padding-top: .5em;
+	padding-bottom: .5em;
+//	margin-right: 20%;
+	padding-left: 20px;
+	background-color: #EFEFEF;
+	font-size: 1em;
+	border-radius: .4em;
+	line-height: 2em;
+}
+
+
+section pre span {
+	float: none;
+	margin-left: 1rem;
+	font-size: 1em;
+}
