--- a/_sass/minimal/_header.scss
+++ b/_sass/minimal/_header.scss
@@ -1,7 +1,7 @@
 header {
   width: 100%;
   // margin: auto;
-  font-size: 1.75em;
+  font-size: 1.75rem;
   color: $theme-text-color;
   margin-top: 4em;
   margin-bottom: 1em;
