--- a/_sass/minimal/_splash.scss
+++ b/_sass/minimal/_splash.scss
@@ -2,7 +2,7 @@
 	width: 15%;
 	// margin-left: 0em;
 	// font-size: 1.5em;
-	font-size: 1.5vw;
+	font-size: 1.75rem;
 	margin-top: 4em;
 	margin-bottom: 1em;
 	letter-spacing: .2em;
@@ -94,7 +94,7 @@
 	.splash-header {
 		// margin-top: 1em;
 		width: 100%;
-		font-size: 1.5em;
+		font-size: 1.75rem;
 		margin-top: 1em;
 	}
 }
